...
      width: Helper.getScreenWidth(context),
      child: SafeArea(
        child: Column(
          children: [
            const Spacer(),
            Text(
              'Login',
              style: Helper.getTheme(context).headlineSmall?.copyWith(
                fontWeight: FontWeight.bold,
                fontSize: 35,
              ),
            ),
            const Spacer(),
...
