...
                                          horizontal: 20,
                                          vertical: 10,
                                        ),
                                        child: Text(state.food.description),
                                      ),

                                      _buildSectionTitle("Ingredients"),
                                      Padding(
                                        padding: const EdgeInsets.symmetric(
                                          horizontal: 20,
                                          vertical: 10,
                                        ),
                                        child: Text(state.food.ingredients),
...
